*** empty log message ***

--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
   <tr>
     <td align=left valign=top bgcolor="#FFFFFF">
     This page is initially blank. Soon it will spring to life with amazing and
-    interesting content.
+    interesting content...
   </tr>
 
 </table>
