--- a/main.html
+++ b/main.html
@@ -31,8 +31,9 @@
 
   <tr>
     <td align=left valign=top bgcolor="#FFFFFF">
-    This page is initially blank. Soon it will spring to life with amazing and
-    interesting content...
+    This page is initially blank. Soon it will spring to life with amazing and 
+	interesting content.&nbsp; For now refer to:
+	<a href="http://www.cs.ubc.ca/~mylar/">http://www.cs.ubc.ca/~mylar/</a>&nbsp;
   </tr>
 
 </table>
