Temporary pointer to old page

--- a/main.html
+++ b/main.html
@@ -33,7 +33,8 @@
     <td align=left valign=top bgcolor="#FFFFFF">
     This page is initially blank. Soon it will spring to life with amazing and 
 	interesting content.&nbsp; For now refer to:
-	<a href="http://www.cs.ubc.ca/~mylar/">http://www.cs.ubc.ca/~mylar/</a>&nbsp;
+	<a target="_top" href="http://www.cs.ubc.ca/~mylar/">
+	http://www.cs.ubc.ca/~mylar/</a>&nbsp;
   </tr>
 
 </table>
