--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 <SCRIPT>
   </SCRIPT>
 </HEAD>
-<BODY LINK="#4756AC" VLINK="#60657B" BGCOLOR="#FFFFFF">					
+<BODY LINK="#4756AC" VLINK="#60657B" BGCOLOR="#FFFFFF" marginwidth="1" marginheight="1">					
 						
       <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0" width="100%">   
       
@@ -39,9 +39,9 @@
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0" width="100%">
               <TR>
 					<input type="hidden" name="cof" value="LW:220;L:http://kerstens.org/mik/images/logo.gif;LH:25;AH:center;AWFID:19effb5f29364567;">
-                <td bgcolor="#A5A6A6" width=* height=50 align="left"><img border=0 src="images/mylar-eclipse-logo.gif"></TR>
-                <td class=smallParagraph width=282 height=50 align="center"><img border=0 src="images/glasses.gif"></TR>
-                <td BGCOLOR="#AABFD5" class=smallParagraph width=* height=50 align="right"><img border=0 src="images/mylar-logo.gif"></TR>
+                <td bgcolor="#ABABAC" width=* height=50 align="left"><a href="http://eclipse.org"><img border=0 src="images/banner-eclipse.gif"></a></TR>
+                <td class=smallParagraph width=282 height=50 align="center"><img border=0 src="images/banner-glasses.gif"></TR>
+                <td BGCOLOR="#C8CEDC" class=smallParagraph width=* height=50 align="right"><img border=0 src="images/banner-mylar.gif"></TR>
             </TABLE>
          </TD>          
          <td ALIGN="left" VALIGN="top" width="1" bgcolor="#999999">
@@ -66,10 +66,18 @@
                 <TD class=smallParagraph>
 					<table border="0" cellpadding="4" width="100%">
                       <tr>
-                        <td class=smallParagraph width="100%">Mylar is an 
-						Eclipse plug-in that makes working with very large 
-						projects as easy as it is to work with small projects. 
-						It does this by encoding your editing and navigation 
+                        <td class=smallParagraph width="100%">
+								<b><font color="#6F7A92">Mylar is</font></b><br>
+								a) An aluminized film used to avoid blindness 
+								when staring at a solar eclipse<br>
+								b) A user interface and interaction ‘skin’ used 
+								to avoid information blindness when staring at 
+								Eclipse<br>
+						<br>
+						Mylar is an eclipse.org
+						<a href="http://www.eclipse.org/technology/index.html">
+						technology project</a> that makes working with large 
+						systems as easy as it is to work with small systems.&nbsp; It does this by encoding your editing and navigation 
 						activity in a degree of interest model and only showing 
 						the elements that you are working on.&nbsp; It also 
 						finds elements related to what you are working on by 
@@ -78,6 +86,7 @@
 						get an overview of Mylar is by looking at the 
 						<a href="presentations/mylar-eclipsecon2005-web.ppt">EclipseCon 
 						presentation</a>.</td>
+                        <td class=smallParagraph width="100%"><img border=0 src="images/mylar-figure.gif"></td>
                       </tr>
                       </table>
 				</TD>
@@ -106,7 +115,7 @@
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0">
               <TR>
                 <td height=20><p align="left" class="smallParagraph"><b>
-                <font color="#666666">Mailing list</font></b></p></td>
+                <font color="#666666">plan</font></b></p></td>
 			  </TR>
             </TABLE>
          </TD>          
@@ -171,7 +180,7 @@
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0">
               <TR>
                 <td height=20><p align="left" class="smallParagraph"><b>
-                <font color="#666666">Presentations</font></b></p></td>
+                <font color="#666666">presentations</font></b></p></td>
 			  </TR>
             </TABLE>
          </TD>          
@@ -262,7 +271,7 @@
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0">
               <TR>
                 <td height=20><p align="left" class="smallParagraph"><b>
-                <font color="#666666">Papers</font></b></p></td>
+                <font color="#666666">papers</font></b></p></td>
 			  </TR>
             </TABLE>
          </TD>          
@@ -374,12 +383,7 @@
 								<br>
 &nbsp;
 								<br>
-								<b><font color="#6F7A92">1. Mylar is</font></b><br>
-								a) An aluminized film used to avoid blindness 
-								when staring at a solar eclipse<br>
-								b) A user interface and interaction ‘skin’ used 
-								to avoid information blindness when staring at 
-								Eclipse<br>
+								<br>
 &nbsp;</td>
 								<td width="10">
 								&nbsp;</td>
@@ -428,8 +432,9 @@
               <TR>
                 <TD height=20>
                   <FONT class=smallParagraph>&nbsp;<font color="#999999">Last 
-					modified on March 2, 2005.&nbsp; For comments or more 
-					information email: beatmik-at-acm.org&nbsp;
+					modified on May 18, 2005.&nbsp; Report comments to
+					<a href="https://bugs.eclipse.org/bugs/enter_bug.cgi?product=Mylar">
+					bugzilla</a>&nbsp;
                   </font></TD>
               </TR>
               <!-- END CONTENT --> 
