--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <HTML>
 <HEAD>
+  <meta http-equiv="Content-Language" content="en-us">
   <META HTTP-EQUIV="EXPIRES" CONTENT="0">
   <META HTTP-EQUIV="" CONTENT="">
   <LINK REL=STYLESHEET HREF="style.css" TYPE="text/css"> 
@@ -35,12 +36,12 @@
           <TD ALIGN="left" VALIGN="top" width=10 BGCOLOR="#FFFFFF"><IMG src="images/clearDot.gif" width=5 border=0 alt=""></TD>
           <td ALIGN="left" VALIGN="top" width="1" bgcolor="#999999">
           <IMG src="images/clearDot.gif" border=0 alt="" width="1" height="1"></td>
-          <TD BGCOLOR="#AABFD5" width="*" height=20>
+          <TD BGCOLOR="#C8CEDC" width="*" height=20>
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0" width="100%">
               <TR>
 					<input type="hidden" name="cof" value="LW:220;L:http://kerstens.org/mik/images/logo.gif;LH:25;AH:center;AWFID:19effb5f29364567;">
                 <td bgcolor="#ABABAC" width=* height=50 align="left"><a href="http://eclipse.org"><img border=0 src="images/banner-eclipse.gif"></a></TR>
-                <td class=smallParagraph width=282 height=50 align="center"><img border=0 src="images/banner-glasses.gif"></TR>
+                <td bgcolor="#C8CEDC" class=smallParagraph width=282 height=50 align="center"><img border=0 src="images/banner-glasses.gif"></TR>
                 <td BGCOLOR="#C8CEDC" class=smallParagraph width=* height=50 align="right"><img border=0 src="images/banner-mylar.gif"></TR>
             </TABLE>
          </TD>          
@@ -180,7 +181,7 @@
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0">
               <TR>
                 <td height=20><p align="left" class="smallParagraph"><b>
-                <font color="#666666">presentations</font></b></p></td>
+                <font color="#666666">publications and presentations</font></b></p></td>
 			  </TR>
             </TABLE>
          </TD>          
@@ -209,34 +210,77 @@
               
               <!-- START CONTENT -->
               <TR>
+                <TD class=smallParagraph>
+					<table border="0" cellpadding="4" width="100%">
+                      <tr>
+                        <td class=smallParagraph width="100%">The only 
+						documentation available about Mylar at this time...</td>
+                      </tr>
+                      </table>
+				</TD>
+              </TR>
+
+              <TR>
                 <TD>
                     <div align="center">
                       <center>
                     <table cellSpacing="4" cellPadding="3" width="100%" border="0" style="border-collapse: collapse" bordercolor="#111111">
                       	<tr>
-                        <td width="25%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <td width="30%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        Mylar team</td>
+                        <td width="40%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <a href="publications/2005-05-mylar-creation-review.ppt">Mylar eclipse.org project creation review 
+						(PPT)</a>
+						<a href="publications/2005-05-mylar-creation-review.pdf">
+						(PDF)</a></td>
+                        <td width="30%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <a href="http://eclipse.org/projects/index.html">2005-05 
+						provisioning presentation</a></td>
+                      </tr>
+                      	<tr>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        Mylar team</td>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <a href="publications/2005-04-mylar-proposal.html">Mylar 
+						eclipse.org project proposal (HTML)</a></td>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <a href="http://eclipse.org/projects/index.html">2005-04 
+						provisioning proposal</a></td>
+                      </tr>
+                      	<tr>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
                         <a href="http://kerstens.org/mik">Mik Kersten</a>, 
-						<a href="http://www.cs.ubc.ca/~murphy/">Gail Murphy</a> and Shawn Minto</td>
-                        <td width="50%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
-                        <a href="presentations/mylar-eclipsecon2005-web.ppt">Mylar: a 
+						<a href="http://www.cs.ubc.ca/~murphy/">Gail Murphy</a> 
+						and Shawn Minto</td>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <a href="publications/2005-03-mylar-eclipsecon-web.ppt">Mylar: a 
 						degree-of-interest model for Eclipse (PPT)</a></td>
-                        <td width="25%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
-                        <a href="http://www.eclipsecon.org/sessions.php">EclipseCon 2005 presentation</a></td>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <a href="http://www.eclipsecon.org/sessions.php">2005-03 
+						EclipseCon presentation</a></td>
                       </tr>
                       <tr>
-                        <td width="25%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
                         <a href="http://kerstens.org/mik">Mik Kersten</a> and 
 						<a href="http://www.cs.ubc.ca/~murphy/">Gail Murphy</a></td>
-                        <td width="50%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
-                        <a href="presentations/mylar-aosd2005-web.ppt">Mylar: a 
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <a href="publications/2005-03-mylar-aosd-web.ppt">Mylar: a 
 						degree-of-interest model for IDEs (PPT)</a></td>
-                        <td width="25%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
                         <a href="http://aosd.net/2005/program/technical.php">
-						AOSD 2005 presentation</a></td>
+						2005-03 AOSD presentation</a></td>
                       </tr>
-                      </table>
-                      &nbsp;
-                      </center>
+                      <tr>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <a href="http://kerstens.org/mik">Mik Kersten</a> and 
+						<a href="http://www.cs.ubc.ca/~murphy/">Gail Murphy</a></td>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <a href="publications/2005-03-mylar-aosd.pdf">Mylar: a degree-of-interest model for IDEs (PDF)</a></td>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
+                        <a href="http://aosd.net/2005/program/technical.php">
+						2005-03 AOSD paper</a></td>
+                      </tr>
+                      </table>&nbsp;</center>
                     </div>
                 </TD>
               </TR>
@@ -306,13 +350,11 @@
                     <table cellSpacing="4" cellPadding="3" width="100%" border="0" style="border-collapse: collapse" bordercolor="#111111">
                                             <tr>
                         <td width="25%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
-                        <a href="http://kerstens.org/mik">Mik Kersten</a> and 
-						<a href="http://www.cs.ubc.ca/~murphy/">Gail Murphy</a></td>
+                        &nbsp;</td>
                         <td width="50%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
-                        <a href="http://kerstens.org/mik/publications/mylar-aosd2005.pdf">Mylar: a degree-of-interest model for IDEs (PDF)</a></td>
+                        &nbsp;</td>
                         <td width="25%" class="smallParagraph" align="left" valign="top" bgcolor="#F1F3F5">
-                        <a href="http://aosd.net/2005/program/technical.php">
-						AOSD 2005 paper</a></td>
+                        &nbsp;</td>
                       						</tr>
                       </table>&nbsp;
                       </center>
@@ -343,7 +385,7 @@
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0">
               <TR>
                 <td height=20><p align="left" class="smallParagraph"><b>
-                <font color="#666666">Information</font></b></p></td>
+                <font color="#666666">about</font></b></p></td>
 			  </TR>
             </TABLE>
          </TD>          
@@ -374,6 +416,8 @@
 							<!-- MSTableType="nolayout" -->
 							<tr>
 								<td class=smallParagraph rowspan="2" align="left" valign="top">
+								<br>
+								<br>
 								Mylar is a project at the Software 
 								Practices Lab of the University of British 
 								Columbia in Vancouver, Canada.&nbsp; The project 
