--- a/test.html
+++ b/test.html
@@ -418,13 +418,7 @@
 								<td class=smallParagraph rowspan="2" align="left" valign="top">
 								<br>
 								<br>
-								Mylar is a project at the Software 
-								Practices Lab of the University of British 
-								Columbia in Vancouver, Canada.&nbsp; The project 
-								is built on the open source Eclipse platform, 
-								and is been funded by the IBM Centre for 
-								Advanced Studies, NSERC, and UBC.&nbsp; <br>
-								<br>
+								Mylar is...<br>
 &nbsp;
 								<br>
 								<br>
