--- a/test.html
+++ b/test.html
@@ -68,7 +68,7 @@
 					<table border="0" cellpadding="4" width="100%">
                       <tr>
                         <td class=paragraph width="100%">
-								<p class="paragraph">
+								<p class="smallParagraph">
 								<b>
 								<i><font color="#6F7A92">mylar </font></i><font color="#6F7A92">
 								is</font></b><br>
@@ -119,7 +119,7 @@
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0">
               <TR>
                 <td height=20><p align="left" class="smallParagraph"><b>
-                <font color="#666666">plan</font></b></p></td>
+                <font color="#666666">availability</font></b></p></td>
 			  </TR>
             </TABLE>
          </TD>          
@@ -149,7 +149,7 @@
 					<table border="0" cellpadding="4" width="100%">
                       <tr>
                         <td class=smallParagraph width="100%">
-						<p class="paragraph">If you are interested in hearing about the pre-release 
+						<p class="smallParagraph">If you are interested in hearing about the pre-release 
 						of Mylar, scheduled for early summer, please <b>
 						<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">sign up for our 
 						announcement list</a></b>.<br>
@@ -217,7 +217,8 @@
                 <TD class=smallParagraph>
 					<table border="0" cellpadding="4" width="100%">
                       <tr>
-                        <td class=smallParagraph width="100%">The only 
+                        <td class=paragraph width="100%">
+						<p class="smallParagraph">The only 
 						documentation available about Mylar at this time...</td>
                       </tr>
                       </table>
@@ -225,7 +226,7 @@
               </TR>
 
               <TR>
-                <TD>
+                <TD class=paragraph>
                     <div align="center">
                       <center>
                     <table cellSpacing="4" cellPadding="3" width="100%" border="0" style="border-collapse: collapse" bordercolor="#111111">
