--- a/main.html
+++ b/main.html
@@ -31,9 +31,9 @@
 
   <tr>
     <td align=left valign=top bgcolor="#FFFFFF">
-    This page is initially blank. Soon it will spring to life with amazing and 
-	interesting content.&nbsp; For now refer to:
-	<a target="_top" href="http://www.cs.ubc.ca/~mylar/">
+    <br>
+	This project's page will become available next week (May 24th).&nbsp; For 
+	now please refer to: <a target="_top" href="http://www.cs.ubc.ca/~mylar/">
 	http://www.cs.ubc.ca/~mylar/</a>&nbsp;
   </tr>
 
