--- a/main.html
+++ b/main.html
@@ -33,9 +33,9 @@
     <td align=left valign=top bgcolor="#FFFFFF">
     <br>
 	This project's page will become available next week (May 24th).&nbsp; For 
-	now please refer to: <a target="_top" href="http://www.cs.ubc.ca/~mylar/">
-	http://www.cs.ubc.ca/~mylar/</a>&nbsp;
-  </tr>
+	now please refer to: <b>
+	<a target="_top" href="http://www.cs.ubc.ca/~mylar/">
+	http://www.cs.ubc.ca/~mylar/</a> </b>&nbsp;</tr>
 
 </table>
 
