Minor improvements to intro

--- a/test.html
+++ b/test.html
@@ -77,7 +77,12 @@
 								b) A user interface and interaction skin used 
 								to avoid information blindness when staring at 
 								Eclipse<p class="smallParagraph">
-								Mylar is also an eclipse.org 
+								On large systems IDE views become overloaded 
+								with elements causing us to waste time scrolling 
+								through long trees and repeatedly inspecting 
+								search results to find elements related the task 
+								at hand.&nbsp;
+								Mylar is an eclipse.org 
 						<a href="http://www.eclipse.org/technology/index.html">
 						technology project</a> that makes working with large 
 						systems as easy as it is to work with small systems.&nbsp; It does this by encoding your editing and navigation 
