--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
   <tr>
     <td align=left valign=top bgcolor="#FFFFFF">
     <br>
-	This project's page will become available next week (May 24th).&nbsp; For 
+	This project's page will become available this week.&nbsp; For 
 	now please refer to: <b>
 	<a target="_top" href="http://www.cs.ubc.ca/~mylar/">
 	http://www.cs.ubc.ca/~mylar/</a> </b>&nbsp;</tr>
