--- a/test.html
+++ b/test.html
@@ -71,17 +71,16 @@
 								<p class="smallParagraph">
 								On large systems IDE views become overloaded 
 								with elements. But no matter how complex the 
-								system we work on is, for any task that we 
-								do--any defect we fix or feature we add--we only 
+								system we work on is for any task that we 
+								do, any defect we fix or feature we add, we only 
 								care about a subset of the system.&nbsp; Mylar 
 								captures the parts of the system related to the 
-								task at hand, and extends the Eclipse UI to show 
-								only what we are working on.&nbsp; Mylar is a 
+								task at hand, and extends the Eclipse UI to show only what we are working on.&nbsp; Mylar is a 
 								new
 								<a href="http://www.eclipse.org/technology/index.html">
 								eclipse.org technology project</a>. Right now best way to 
-						get an overview of the tool and technology is by looking at the 
-						<a href="presentations/mylar-eclipsecon2005-web.ppt">EclipseCon 
+						get an overview of the tool and technology is by looking at the
+								<a href="publications/2005-03-mylar-eclipsecon-web.ppt">EclipseCon 
 						presentation</a>.<p class="smallParagraph">
 								<b>
 								<font color="#6F7A92">Availability: </font></b>
@@ -406,9 +405,8 @@
 								information when the size of a system dwarfs what we need to 
 								know to complete a task.&nbsp; Initially Mylar 
 								will provide a 
-								model and user interface 
-								facilities and visualizations for exposing task 
-								context, and a reference implementation for Java 
+								model for exposing task context, user interface 
+								facilities, visualizations and a reference implementation for Java 
 								development.&nbsp; A driving goal of the 
 								implementation is to make Mylar easy for the 
 								eclipse.org community to build on and extend.&nbsp; 
@@ -416,8 +414,8 @@
 								C/C++ development, while longer-term directions 
 								include collaboration support and RCP 
 								applications.&nbsp; If you are interested 
-								in becoming involved with development or sharing ideas 
-								please sign up for the
+								in becoming involved with development or in sharing ideas 
+								please subscribe to the
 								<a href="http://dev.eclipse.org/mailman/listinfo/mylar-dev">
 								developer list</a>.&nbsp; <br>
 								<br>
