--- a/test.html
+++ b/test.html
@@ -64,10 +64,11 @@
               
               <!-- START CONTENT -->
               <TR>
-                <TD class=smallParagraph>
+                <TD >
 					<table border="0" cellpadding="4" width="100%">
                       <tr>
-                        <td class=paragraph width="70%">
+                        <td class=paragraph width="5%"><img border=0 src="images/screenshot-mylar-small.gif"></td>
+                        <td class=paragraph width="40%">
 								<p class="smallParagraph">
 								On large systems IDE views become overloaded 
 								with elements. But no matter how complex the 
@@ -75,15 +76,17 @@
 								do, any defect we fix or feature we add, we only 
 								care about a subset of the system.&nbsp; Mylar 
 								captures the parts of the system related to the 
-								task at hand, and extends the Eclipse UI to show only what we are working on.&nbsp; Mylar is a 
-								new
-								<a href="http://www.eclipse.org/technology/index.html">
-								eclipse.org technology project</a>. Right now best way to 
+								task at hand, and extends the Eclipse UI to show only what we are working on.&nbsp;The 
+								screenshot to the left shows one Eclipse view 
+								extended with Mylar. Right now best way to 
 						get an overview of the tool and technology is by looking at the
 								<a href="publications/2005-03-mylar-eclipsecon-web.ppt">EclipseCon 
 						presentation</a>.<p class="smallParagraph">
 								<b>
-								<font color="#6F7A92">Availability: </font></b>
+								<font color="#6F7A92">Availability: </font></b>Mylar is a 
+								new
+								<a href="http://www.eclipse.org/technology/index.html">
+								eclipse.org technology project</a>.&nbsp;
 										We are planning a preview release of 
 										Mylar to coincide with the Eclipse 3.1 
 										release, and will announce more about 
@@ -92,12 +95,18 @@
 						<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">
 						<span style="font-weight: 400">let us know</span></a></b>.
 										</td>
-                        <td class=smallParagraph width="30%">
+                        <td class=smallParagraph width="30%" align="right" valign="top">
 						<table id="table4" style="BORDER-COLLAPSE: collapse" borderColor="#111111" cellSpacing="4" cellPadding="3" border="0">
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" bordercolor="#F1F3F5" colspan="2" bgcolor="#F8F3F4">
 								<b>
                 				<font color="#666666">news and blogs</font></b></td>
+							</tr>
+							<tr>
+								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
+								<font color="#888888"><i>Sep.</i></font></td>
+								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
+								<font color="#888888"><i>Initial public release (v0.3)</i></font></td>
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
@@ -196,30 +205,6 @@
                         <td class=smallParagraph width="100%">
 						<table cellSpacing="4" cellPadding="3" width="100%" border="0" style="border-collapse: collapse" bordercolor="#111111" id="table2">
                       	<tr>
-                        <td width="30%" class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
-                        <a href="mailto:mylar-dev@eclipse.org">
-						mylar-dev@eclipse.org</a></td>
-                        <td width="*" class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
-                        developer discussions, higher traffic mailing list</td>
-                        <td width="10%" class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
-                        <a href="http://dev.eclipse.org/mailman/listinfo/mylar-dev">subscribe/unsubscribe</a></td>
-                        <td width="10%" class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
-                        <a href="http://dev.eclipse.org/mhonarc/lists/mylar-dev/maillist.html">
-						archive</a></td>
-                      </tr>
-                      	<tr>
-                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
-                        <a href="mailto:mylar-users@eclipse.org">
-						mylar-users@eclipse.org</a></td>
-                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
-                        user discussions, questions, and suggestions</td>
-                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
-                        <a href="http://dev.eclipse.org/mailman/listinfo/mylar-users">subscribe/unsubscribe</a></td>
-                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
-                        <a href="http://dev.eclipse.org/mhonarc/lists/mylar-users/maillist.html">
-						archive</a></td>
-                      </tr>
-                      	<tr>
                         <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
                         <a href="mailto:mylar-users@eclipse.org">
 						mylar-announce@eclipse.org</a></td>
@@ -231,8 +216,32 @@
                         <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
                         <a href="http://dev.eclipse.org/mhonarc/lists/mylar-announce/maillist.html">
 						archive</a></td>
+                      	</tr>
+						<tr>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
+                        <a href="mailto:mylar-users@eclipse.org">
+						mylar-users@eclipse.org</a></td>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
+                        user discussions, questions, and suggestions</td>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
+                        <a href="http://dev.eclipse.org/mailman/listinfo/mylar-users">subscribe/unsubscribe</a></td>
+                        <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
+                        <a href="http://dev.eclipse.org/mhonarc/lists/mylar-users/maillist.html">
+						archive</a></td>
+                      	</tr>
+                      	<tr>
+                        <td width="30%" class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
+                        <a href="mailto:mylar-dev@eclipse.org">
+						mylar-dev@eclipse.org</a></td>
+                        <td width="*" class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
+                        developer discussions, higher traffic mailing list</td>
+                        <td width="10%" class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
+                        <a href="http://dev.eclipse.org/mailman/listinfo/mylar-dev">subscribe/unsubscribe</a></td>
+                        <td width="10%" class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
+                        <a href="http://dev.eclipse.org/mhonarc/lists/mylar-dev/maillist.html">
+						archive</a></td>
                       </tr>
-                      </table></td>
+                      	</table></td>
                       </tr>
                       </table>
 				</TD>
@@ -435,7 +444,7 @@
 								to avoid information blindness when staring at 
 								Eclipse</td>
 								<td class=smallParagraph align="left" valign="top">
-						<img border=0 src="images/screenshot-mylar-small.gif"></td>
+						&nbsp;</td>
 							</tr>
 							</table>
 						</td>
