--- a/test.html
+++ b/test.html
@@ -71,14 +71,15 @@
                         <td class=paragraph width="40%">
 								<p class="smallParagraph">
 								On large systems IDE views become overloaded 
-								with elements. But no matter how complex the 
-								system we work on is for any task that we 
-								do, any defect we fix or feature we add, we only 
-								care about a subset of the system.&nbsp; Mylar 
-								captures the parts of the system related to the 
-								task at hand, and extends the Eclipse UI to show only what we are working on.&nbsp;The 
-								screenshot to the left shows one Eclipse view 
-								extended with Mylar. Right now best way to 
+								with elements. But for any task that we 
+								work, any defect we fix or feature we add, we 
+								only care about a subset of the system.&nbsp; 
+								Mylar captures the parts of the system related 
+								to the task at hand, and extends the Eclipse UI 
+								to show only the information related to the task 
+								at hand (e.g. by filtering uninteresting 
+								elements, as visible to the left). At this time 
+								the best way to 
 						get an overview of the tool and technology is by looking at the
 								<a href="publications/2005-03-mylar-eclipsecon-web.ppt">EclipseCon 
 						presentation</a>.<p class="smallParagraph">
