--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 								Software Practices Lab at UBC</a>, the
 								<a href="https://www-927.ibm.com/ibm/cas/">IBM 
 								Centre for Advanced Studies</a>, and
-								<a href="crsng.gc.ca/">NSERC</a>.<br>
+								<a href="http://www.nserc-crsng.gc.ca/">NSERC</a>.<br>
 								<b>
 								<font color="#6F7A92"><i>&nbsp; <br>
 								&quot;</i>mylar<i>&quot; </i> </font><font color="#6F7A92">
