*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
 								<font color="#888888"><i>July</i></font></td>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
-								<font color="#888888"><i>Preview release (v0.3)</i></font></td>
+								<font color="#888888"><i>Planned preview release (v0.3)</i></font></td>
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" rowspan="2">
