--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
           <TD ALIGN="left" VALIGN="top" width=10 BGCOLOR="#FFFFFF"><IMG src="images/clearDot.gif" width=5 border=0 alt=""></TD>
           <td ALIGN="left" VALIGN="top" width="1" bgcolor="#999999">
           <IMG src="images/clearDot.gif" border=0 alt="" width="1" height="1"></td>
-          <TD BGCOLOR="#C8CEDC" width="*" height=20>
+          <TD BGCOLOR="#C8CEDC" width="*" height=50>
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0" width="100%">
-              <TR>
-					<input type="hidden" name="cof" value="LW:220;L:http://kerstens.org/mik/images/logo.gif;LH:25;AH:center;AWFID:19effb5f29364567;">
-                <td bgcolor="#ABABAC" width=* height=50 align="left"><a href="http://eclipse.org"><img border=0 src="images/banner-eclipse.gif"></a></TR>
-                <td bgcolor="#C8CEDC" class=smallParagraph width=282 height=50 align="center"><img border=0 src="images/banner-glasses.gif"></TR>
-                <td BGCOLOR="#C8CEDC" class=smallParagraph width=* height=50 align="right">
-				<a href="http://www.eclipse.org/technology/"><img border=0 src="images/banner-mylar.gif"></a></TR>
+              <TR height=50>
+				<td bgcolor="#ABABAC" width=* height=50 align="left"><a href="http://eclipse.org"><img height=50 border=0 src="images/banner-eclipse.gif"></a></TD>
+                <td bgcolor="#C8CEDC" class=smallParagraph width=282 height=50 align="center"><img height=50 border=0 src="images/banner-glasses.gif"></TD>
+                <td BGCOLOR="#C8CEDC" class=smallParagraph width=* height=50 align="right"><a href="http://www.eclipse.org/technology/"><img height=50 border=0 src="images/banner-mylar.gif"></a></TD>
+			  </TR>
             </TABLE>
          </TD>          
          <td ALIGN="left" VALIGN="top" width="1" bgcolor="#999999">
@@ -91,7 +90,7 @@
 						<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">
 								let us know</a>.&nbsp; </span></b>&nbsp;</td>
                         <td class=smallParagraph width="30%" align="right" valign="top">
-						<table id="table4" style="BORDER-COLLAPSE: collapse" borderColor="#111111" cellSpacing="4" cellPadding="3" border="0">
+						<table id="table4" borderColor="#111111" cellSpacing="4" cellPadding="3" border="0">
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" bordercolor="#F1F3F5" colspan="2" bgcolor="#F8F3F4">
 								<b>
@@ -202,7 +201,7 @@
 					<table border="0" cellpadding="4" width="100%">
                       <tr>
                         <td class=smallParagraph width="100%">
-						<table cellSpacing="4" cellPadding="3" width="100%" border="0" style="border-collapse: collapse" bordercolor="#111111" id="table2">
+						<table cellSpacing="4" cellPadding="3" width="100%" border="0" bordercolor="#111111" id="table2">
                       	<tr>
                         <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
                         <a href="mailto:mylar-users@eclipse.org">
@@ -305,7 +304,7 @@
 					<table border="0" cellpadding="4" width="100%">
                       <tr>
                         <td class=paragraph width="100%">
-						<table cellSpacing="4" cellPadding="3" width="100%" border="0" style="border-collapse: collapse" bordercolor="#111111" id="table3">
+						<table cellSpacing="4" cellPadding="3" width="100%" border="0" bordercolor="#111111" id="table3">
                       	<tr>
                         <td width="8%" class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
                         May 2005</td>
@@ -400,7 +399,7 @@
 					<table border="0" cellpadding="4" width="100%">
                       <tr>
                         <td class=smallParagraph width="100%">
-	<table border="0" cellpadding="0" style="border-collapse: collapse" width="100%" id="table1">
+	<table border="0" cellpadding="0" width="100%" id="table1">
 							<!-- MSTableType="nolayout" -->
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
