--- a/index.html
+++ b/index.html
@@ -403,23 +403,21 @@
 							<!-- MSTableType="nolayout" -->
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
-								<p class="smallParagraph">The goal of the Mylar project is to demonstrate that modeling our 
+								<p class="smallParagraph">The goal of the Mylar 
+								project is to demonstrate that modeling our 
 								interaction with a system is as important as 
 								modeling the structure of a system.&nbsp; 
 								Current tools are built on structure models 
 								alone, and overload us with irrelevant 
-								information when the size of a system dwarfs what we need to 
-								know to complete a task.&nbsp; Initially Mylar 
-								will provide a 
-								model for exposing task context, user interface 
-								facilities, visualizations and a reference implementation for Java 
-								development.&nbsp; A driving goal of the 
-								implementation is to make Mylar easy for the 
-								eclipse.org community to build on and extend.&nbsp; 
-								Near-term areas of interest include J2EE and 
-								C/C++ development, while longer-term directions 
-								include collaboration support and RCP 
-								applications.&nbsp; If you are interested 
+								information when the size of a system dwarfs 
+								what we need to know to complete a task.&nbsp; 
+								Initially Mylar will provide a model for 
+								exposing task context, user interface 
+								facilities, visualizations and a reference 
+								implementation for Java development.&nbsp; A 
+								driving goal of the implementation is to make 
+								Mylar easy for the eclipse.org community to 
+								build on and extend. If you are interested 
 								in becoming involved with development or in sharing ideas 
 								please subscribe to the
 								<a href="http://dev.eclipse.org/mailman/listinfo/mylar-dev">
