--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								<b>
 								<font color="#6F7A92">Availability:</font></b> 
 								the start of the Mylar preview is planned for 
-								next week, please <b>
+								the first week of July, please <b>
 						<span style="font-weight: 400">
 						<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">
 								let us know</a> if you are interested in 
@@ -105,7 +105,7 @@
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
 								<font color="#888888"><i>July</i></font></td>
-								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F8F3F4" bordercolor="#F1F3F5">
+								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
 								<font color="#888888"><i>Planned preview release (v0.3)</i></font></td>
 							</tr>
 							<tr>
