Added developer docs

--- a/dev.html
+++ b/dev.html
@@ -287,7 +287,7 @@
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0">
               <TR>
                 <td height=20><p align="left" class="smallParagraph"><b>
-                <font color="#666666">conventionss</font></b></p></td>
+                <font color="#666666">conventions</font></b></p></td>
 			  </TR>
             </TABLE>
          </TD>          
@@ -318,41 +318,9 @@
 							<!-- MSTableType="nolayout" -->
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
-								<p class="smallParagraph">The goal of the Mylar 
-								project is to demonstrate that modeling our 
-								interaction with a system is as important as 
-								modeling the structure of a system.&nbsp; 
-								Current tools are built on structure models 
-								alone, and overload us with irrelevant 
-								information when the size of a system dwarfs 
-								what we need to know to complete a task.&nbsp; 
-								Initially Mylar will provide a model for 
-								exposing task context, user interface 
-								facilities, visualizations and a reference 
-								implementation for Java development.&nbsp; A 
-								driving goal of the implementation is to make 
-								Mylar easy for the eclipse.org community to 
-								build on and extend. If you are interested 
-								in becoming involved with development or in sharing ideas 
-								please subscribe to the
-								<a href="http://dev.eclipse.org/mailman/listinfo/mylar-dev">
-								developer list</a>.&nbsp;<br>
-&nbsp; <br>
-								Mylar is supported by the
-								<a href="http://www.cs.ubc.ca/labs/spl/">
-								Software Practices Lab at UBC</a>, the
-								<a href="https://www-927.ibm.com/ibm/cas/">IBM 
-								Centre for Advanced Studies</a>, and
-								<a href="http://www.nserc-crsng.gc.ca/">NSERC</a>.<br>
-								<b>
-								<font color="#6F7A92"><i>&nbsp; <br>
-								&quot;</i>mylar<i>&quot; </i> </font><font color="#6F7A92">
-								is</font></b><br>
-								a) An aluminized film used to avoid blindness 
-								when staring at a solar eclipse<br>
-								b) A user interface and interaction skin used to 
-								avoid information blindness when staring at 
-								Eclipse</td>
+								<p class="smallParagraph">For handling 
+								exceptions and logging use MylarPlugin.log(..) 
+								or MylarPlugin.fail(..).</td>
 							</tr>
 							</table>
 						</td>
