Clean up for easing workspace setup

--- a/dev.html
+++ b/dev.html
@@ -320,7 +320,8 @@
 								<td class=smallParagraph align="left" valign="top">
 								<p class="smallParagraph">For handling 
 								exceptions and logging use MylarPlugin.log(..) 
-								or MylarPlugin.fail(..).</td>
+								or MylarPlugin.fail(..)<br>
+&nbsp; </td>
 							</tr>
 							</table>
 						</td>
