*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -76,7 +76,8 @@
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
 								<h3 align="center">
-								<font color="#6F7A92">Mylar Developer 
+								<font color="#6F7A92"><br>
+								Mylar Developer 
 								Documentation</font></h3>
 								</td>
 							</tr>
