--- a/dev.html
+++ b/dev.html
@@ -319,9 +319,15 @@
 							<!-- MSTableType="nolayout" -->
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
-								<p class="smallParagraph">For handling 
+								<p class="smallParagraph">- For handling 
 								exceptions and logging use MylarPlugin.log(..) 
 								or MylarPlugin.fail(..)<br>
+								- In CVS files ending with .mmap are
+								<a href="http://www.mindjet.com">MindManager</a> 
+								mind maps (there is a
+								<a href="http://ftp2.mindjet.com/download/signed/MMX52-E-343_Viewer.exe">
+								free viewer</a> for Windows).<br>
+								<br>
 &nbsp; </td>
 							</tr>
 							</table>
