--- a/dev.html
+++ b/dev.html
@@ -83,14 +83,14 @@
 							</tr>
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
-								<p class="smallParagraph">If you are interested in extending Mylar please 
-								email <a href="mailto:mylar-dev@eclipse.org">
-								mylar-dev@eclipse.org</a>.&nbsp; Mylar is in a 
+								<p class="smallParagraph">Mylar is in a 
 								pre-release stage, evolving rapidly, and 
 								provides no fixed APIs.&nbsp; We expect to 
 								announce some stability in the APIs before the 
 								end of summer, and until then the policy is 
-								extend at your own risk.&nbsp;</td>
+								extend at your own risk.&nbsp;If you are interested in extending Mylar please 
+								email <a href="mailto:mylar-dev@eclipse.org">
+								mylar-dev@eclipse.org</a>.</td>
 							</tr>
 							</table>
 						</td>
