--- a/dev.html
+++ b/dev.html
@@ -250,8 +250,9 @@
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
 								<p class="smallParagraph">The monitor component is used 
-						for running the user study.&nbsp; For the duration of 
-						the study it will be hosted at UBC.&nbsp; <br>
+						for running the user study, and will be hosted at UBC 
+								for the duration of the study.&nbsp; If you have 
+								access to the UBC repository:<br>
 						- Add CVS location: cascade.cs.ubc.ca /isd/se2/project/mylar/cvs<br>
 						- Check out the 4 org.eclips.mylar.monitor projects</td>
 							</tr>
@@ -319,9 +320,11 @@
 							<!-- MSTableType="nolayout" -->
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
-								<p class="smallParagraph">- For handling 
-								exceptions and logging use MylarPlugin.log(..) 
-								or MylarPlugin.fail(..)<br>
+								<p class="smallParagraph">- With the default 
+								Eclipse 3.1 compile options there should be no 
+								warnings after a build.<br>
+								- For handling exceptions and logging use 
+								MylarPlugin.log(..) or MylarPlugin.fail(..)<br>
 								- In CVS files ending with .mmap are
 								<a href="http://www.mindjet.com">MindManager</a> 
 								mind maps (there is a
