--- a/dev.html
+++ b/dev.html
@@ -325,6 +325,12 @@
 								warnings after a build.<br>
 								- For handling exceptions and logging use 
 								MylarPlugin.log(..) or MylarPlugin.fail(..)<br>
+								- To create a patch, right-click the 
+								corresponding project and select Team -&gt; Create 
+								Patch.&nbsp; Repeat for each project, naming the 
+								patch accordingly (e.g. patch-core.txt, patch-core.tests.txt). 
+								Please submit a unit test along with the patch.
+								<br>
 								- In CVS files ending with .mmap are
 								<a href="http://www.mindjet.com">MindManager</a> 
 								mind maps (there is a
