*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -416,7 +416,11 @@
 								- Priorities: P1: do this week, P2: should do 
 								this week, P3: considered for next week, P4: 
 								later, P5: requires usage input to be 
-								prioritized <br>
+								prioritized.<br>
+								- Releases: for the duration of the study, a 
+								stable minor-minor version number rev happens 
+								each Friday, and minor rev on the first Friday 
+								of each month.<br>
 								- To create a patch, right-click the 
 								corresponding project and select Team -&gt; Create 
 								Patch.&nbsp; Repeat for each project, naming the 
