*** empty log message ***

--- a/ubc-study.html
+++ b/ubc-study.html
@@ -187,26 +187,27 @@ p.MsoPlainText
 	</tr>
 </table>
 <h4 align="center" style="text-align:center">Mylar User Study<font color="#888888">*</font> </h4>
-<p>We are happy to announce the preview release of Mylar (<a style="color: blue; text-decoration: underline; text-underline: single" href="http://eclipse.org/mylar">http://eclipse.org/mylar</a>).&nbsp; 
+<p>We are happy to announce the v0.3 preview release of Mylar (<a style="color: blue; text-decoration: underline; text-underline: single" href="http://eclipse.org/mylar">http://eclipse.org/mylar</a>).&nbsp; 
 The preview release is available to anyone willing to participate in a user 
-study.&nbsp; You have been invited to participate in this study because you expressed 
-interest in the Mylar tool by signing up for the announcement list.&nbsp; This study 
-will help us tune and improve the tool before we make the tool generally 
+study.&nbsp; You have been invited to participate because you expressed 
+interest in Mylar.&nbsp; This study 
+will help us validate, harden and improve the tool before we make it generally 
 available from eclipse.org. Participating in this study will require minimal 
-time from you, as it simply involves using the Mylar tool for your daily work.&nbsp;
+time from you, as it simply involves using Mylar for your daily work.&nbsp;
 </p>
 <p>To participate you must be using Eclipse 3.1 and running on a Java 5 VM.&nbsp; As 
-you work Mylar will monitor your interaction with Eclipse (by logging the IDs 
-of: views used for selections, editors, commands issued, and preference changes 
+you work Mylar will monitor your interaction with Eclipse (by logging IDs 
+of: views, editors, commands, and preference changes 
 along with their values). &nbsp;The log also stores information about the program 
 elements that you edit and navigate, but removes identifying information about 
-those elements.&nbsp; Approximately once every week you will be asked to confirm an 
+those elements by obfuscating their names and paths.&nbsp; Approximately once every week you will be asked to confirm an 
 upload of this interaction log to a UBC server.&nbsp; Before uploading you will have 
 a chance to review the information being sent, and to answer a short 
-questionnaire.&nbsp; If you choose you can remain anonymous throughout the study.&nbsp; 
-The study is composed of three phases.&nbsp; After approximately 10 days worth of 
-interaction data has been collected for each phase, you will be prompted to 
-upgrade to the next phase. </p>
+questionnaire.&nbsp; You will also have the option to remain anonymous throughout the study.&nbsp; 
+</p>
+<p>The study is composed of three phases.&nbsp; After a sufficient amount of 
+interaction data has been collected for each phase (approximately 10 days of 
+usage), you will be prompted to upgrade to the next phase.</p>
 <ul>
 	<li>Phase 0: this will only track plain Eclipse usage to create a baseline, 
 	no Mylar features</li>
@@ -214,7 +215,7 @@ upgrade to the next phase. </p>
 Eclipse views</li>
 	<li>Phase 2: Predicted interest facilities and active versions of some 
 	standard Eclipse views</li>
-	<li>Phase 3: New visualization</li>
+	<li>Phase 3: Experimental features</li>
 </ul>
 <p>To receive further announcements about the user study and future releases 
 <a href="http://eclipse.org/mylar">please sign up for the mylar-announce list</a>.&nbsp;If you are participating in the study we suggest 
