--- a/ubc-study.html
+++ b/ubc-study.html
@@ -186,30 +186,33 @@ p.MsoPlainText
 		604-822-3061</span></td>
 	</tr>
 </table>
-<h4 align="center" style="text-align:center">Mylar User Study<font color="#888888">*</font> </h4>
+<h4 align="center" style="text-align:center">Mylar Preview Release User Study<font color="#888888">*</font> </h4>
 <p>We are happy to announce the v0.3 preview release of Mylar (<a style="color: blue; text-decoration: underline; text-underline: single" href="http://eclipse.org/mylar">http://eclipse.org/mylar</a>).&nbsp; 
-The preview release is available to anyone willing to participate in a user 
-study.&nbsp; You have been invited to participate because you expressed 
-interest in Mylar.&nbsp; This study 
+Mylar monitors programming activity and extends the Eclipse UI to focus on the 
+elements of interest.&nbsp; This preview release is available to anyone willing to participate in a user study.&nbsp; 
+You have been invited to participate because you previously expressed interest 
+in Mylar.&nbsp; The study 
 will help us validate, harden and improve the tool before we make it generally 
 available from eclipse.org. Participating in this study will require minimal 
-time from you, as it simply involves using Mylar for your daily work.&nbsp;
-</p>
-<p>To participate you must be using Eclipse 3.1 and running on a Java 5 VM.&nbsp; As 
+time from you, as it simply involves using Mylar for your daily work.&nbsp; You 
+are free to stop using the tool at any time.</p>
+<p>To use Mylar you must be using
+<a href="http://download.eclipse.org/downloads/drops/R-3.1-200506271435/index.php">Eclipse 3.1</a> and running on a 
+<a href="http://java.sun.com/j2se/1.5.0/download.jsp">Java 5 VM</a>.&nbsp; As 
 you work Mylar will monitor your interaction with Eclipse (by logging IDs 
-of: views, editors, commands, and preference changes 
+of: views, editors, commands, preference changes 
 along with their values). &nbsp;The log also stores information about the program 
 elements that you edit and navigate, but removes identifying information about 
 those elements by obfuscating their names and paths.&nbsp; Approximately once every week you will be asked to confirm an 
 upload of this interaction log to a UBC server.&nbsp; Before uploading you will have 
 a chance to review the information being sent, and to answer a short 
-questionnaire.&nbsp; You will also have the option to remain anonymous throughout the study.&nbsp; 
+questionnaire.&nbsp; You also have the option to remain anonymous throughout the study.&nbsp; 
 </p>
 <p>The study is composed of three phases.&nbsp; After a sufficient amount of 
-interaction data has been collected for each phase (approximately 10 days of 
-usage), you will be prompted to upgrade to the next phase.</p>
+interaction data has been collected for each phase (around 10 days of 'typical' 
+programming activity), you will be prompted to upgrade to the next phase.</p>
 <ul>
-	<li>Phase 0: this will only track plain Eclipse usage to create a baseline, 
+	<li>Phase 0: This will only track plain Eclipse usage to create a baseline, 
 	no Mylar features</li>
 <li>Phase 1: Mylar features providing degree of interest facilities to standard 
 Eclipse views</li>
@@ -217,9 +220,22 @@ Eclipse views</li>
 	standard Eclipse views</li>
 	<li>Phase 3: Experimental features</li>
 </ul>
-<p>To receive further announcements about the user study and future releases 
-<a href="http://eclipse.org/mylar">please sign up for the mylar-announce list</a>.&nbsp;If you are participating in the study we suggest 
-that you <a href="http://eclipse.org/mylar">sign up for the mylar-users list</a>.&nbsp; If you have any 
+<p>To start Phase 0, use Eclipse's update manager to install the Mylar Monitor 
+feature (Help menu -&gt; Software Updates -&gt; Find and Install -&gt; Search for new 
+features to install, then add the URL below Mylar as a New Remote Site called 
+&quot;Mylar Phase 0&quot;):</p>
+<p>&nbsp;&nbsp;&nbsp; <b>http://www.cs.ubc.ca/~mylar/alpha/baseline </b> </p>
+<p>You are free to start the study anytime over the next two weeks, and if you 
+would like to join later just let us know.&nbsp; If you experience any problems 
+installing or using Mylar
+<a href="https://bugs.eclipse.org/bugs/enter_bug.cgi?product=Mylar">please 
+submit a report</a>.&nbsp; Throughout the study bug fix releases will be made 
+available each Monday.&nbsp; To receive further announcements about the user study and future releases 
+<a href="http://eclipse.org/mylar">please sign up for the mylar-announce list</a>.&nbsp;If you 
+participate in the study we suggest 
+that you <a href="http://eclipse.org/mylar">sign up for the mylar-users list</a>.&nbsp; 
+If you have plans to develop or extend Mylar we ask that you wait until you have 
+completed Phase 2, and sign up for the developer list after that point.&nbsp; If you have any 
 other questions simply reply this email. </p>
 <p>Thanks and stay in touch,</p>
 <p>The Mylar Team</p>
@@ -233,8 +249,8 @@ on large systems in Eclipse.&nbsp; We also plan on making this anonymous usage d
 available to other researchers interested in improving the IDE user experience.&nbsp; 
 Please note that the data collected will be archived for future use.&nbsp; This data 
 will be anonymous and not contain any identification information.&nbsp; This study is 
-being conducted by Mik Kersten (beatmik@cs.ubc.ca) as a part of his PhD Thesis 
-and supervised by Dr. Gail Murphy (murphy@cs.ubc.ca).&nbsp; If you have any questions 
+being conducted by Mik Kersten (beatmik-at-cs.ubc.ca) as a part of his PhD Thesis 
+and supervised by Dr. Gail Murphy (murphy-at-cs.ubc.ca).&nbsp; If you have any questions 
 about the data being collected or about the study in general please email us or 
 call Mik Kersten at 604-822-0193.</span></p>
 
