*** empty log message ***

--- a/ubc-study.html
+++ b/ubc-study.html
@@ -193,10 +193,10 @@ Mylar monitors programming activity and extends the Eclipse UI to focus on the
 elements of interest.&nbsp; This preview release is available to anyone willing to participate in a user study.&nbsp; 
 You have been invited to participate because you previously expressed interest 
 in Mylar.&nbsp; The study 
-will help us validate, harden and improve the tool before we make it generally 
-available from eclipse.org.&nbsp; Participating in this study will require 
-minimal time from you, as it simply involves using Mylar for your daily work.&nbsp; 
-You are free to stop using the tool at any time.</p>
+will help us validate, harden and improve the usability of the tool before we make 
+it generally available from eclipse.org.&nbsp; Participating in this study will 
+require minimal time from you, as it simply involves using Mylar for your daily 
+work.&nbsp; You are free to stop using the tool at any time.</p>
 <p>To use Mylar you must be using
 <a href="http://download.eclipse.org/downloads/drops/R-3.1-200506271435/index.php">Eclipse 3.1</a> and running on a 
 <a href="http://java.sun.com/j2se/1.5.0/download.jsp">Java 5 VM</a>.&nbsp; As 
