*** empty log message ***

--- a/ubc-study.html
+++ b/ubc-study.html
@@ -197,7 +197,7 @@ will help us validate, harden and improve the usability of the tool before we ma
 it generally available from eclipse.org.&nbsp; Participating in this study will 
 require minimal time from you, as it simply involves using Mylar for your daily 
 work.&nbsp; You are free to stop using the tool at any time.</p>
-<p>To use Mylar you must be using
+<p>To use Mylar you <i>must</i> be using
 <a href="http://download.eclipse.org/downloads/drops/R-3.1-200506271435/index.php">Eclipse 3.1</a> and running on a 
 <a href="http://java.sun.com/j2se/1.5.0/download.jsp">Java 5 VM</a>.&nbsp; As 
 you work Mylar will monitor your interaction with Eclipse by logging IDs 
@@ -214,7 +214,7 @@ interaction data has been collected for each phase, around 10 days of 'typical'
 programming activity, you will be prompted to upgrade to the next phase.</p>
 <ul>
 	<li>Phase 0: This will only track plain Eclipse usage to create a baseline, 
-	no Mylar features</li>
+	<i>no Mylar features</i></li>
 <li>Phase 1: Mylar features providing degree of interest facilities to standard 
 Eclipse views</li>
 	<li>Phase 2: Predicted interest facilities and active versions of some 
