--- a/index.html
+++ b/index.html
@@ -83,12 +83,10 @@
 						presentation</a>.<p class="smallParagraph">
 								<b>
 								<font color="#6F7A92">Availability:</font></b> 
-								the start of the Mylar preview is planned for 
-								the first week of July, please <b>
-						<span style="font-weight: 400">
-						<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">
-								let us know</a> if you are interested in 
-								participating.</span></b></td>
+								the preview release and user study has started.
+								<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">
+								L</a><b><span style="font-weight: 400"><a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">et us know</a> if you 
+								would like to participate.</span></b></td>
                         <td class=smallParagraph width="30%" align="right" valign="top">
 						<table id="table4" borderColor="#111111" cellSpacing="4" cellPadding="3" border="0">
 							<tr>
@@ -104,9 +102,9 @@
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
-								<font color="#888888"><i>July</i></font></td>
+								July</td>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
-								<font color="#888888"><i>Planned preview release (v0.3)</i></font></td>
+								Preview released (v0.3)</td>
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" rowspan="2">
@@ -475,7 +473,7 @@
               <TR>
                 <TD height=20>
                   <FONT class=smallParagraph>&nbsp;<font color="#999999">Last 
-					modified on June 28, 2005.&nbsp; Please report comments to
+					modified on July 5, 2005.&nbsp; Please report comments to
 					<a href="https://bugs.eclipse.org/bugs/enter_bug.cgi?product=Mylar">
 					<font color="#999999">bugzilla</font></a>&nbsp;
                   </font></TD>
