*** empty log message ***

--- a/ubc-study.html
+++ b/ubc-study.html
@@ -197,12 +197,13 @@ will help us validate, harden and improve the usability of the tool before we ma
 it generally available from eclipse.org.&nbsp; Participating in this study will 
 require minimal time from you, as it simply involves using Mylar for your daily 
 work.&nbsp; You are free to stop using the tool at any time.</p>
-<p>To use Mylar you <i>must</i> be using
-<a href="http://download.eclipse.org/downloads/drops/R-3.1-200506271435/index.php">Eclipse 3.1</a> and running on a 
-<a href="http://java.sun.com/j2se/1.5.0/download.jsp">Java 5 VM</a>.&nbsp; As 
-you work Mylar will monitor your interaction with Eclipse by logging IDs 
-of views, editors, commands, preference changes 
-along with their values. The log also stores information about the program 
+<p>To use Mylar you <i>must</i> running on a
+<a href="http://java.sun.com/j2se/1.5.0/download.jsp">Java 5 VM</a> and using
+<a href="http://download.eclipse.org/downloads/drops/R-3.1-200506271435/index.php">Eclipse 3.1</a>, 
+do not install otherwise.&nbsp; As 
+you work Mylar will monitor your interaction with Eclipse by logging the IDs 
+of views that you use, editors that you work with, commands that you invoke, and 
+preferences that you change. Mylar also generates statistics about the program 
 elements that you edit and navigate, but removes any private information 
 identifying those elements by obfuscating their names and paths.&nbsp; 
 Approximately once every four days you will be asked to confirm an upload of 
@@ -230,7 +231,7 @@ features to install, then add the URL below Mylar as a New Remote Site called
 would like to join later just let us know.&nbsp; If you experience any problems 
 installing or using Mylar
 <a href="https://bugs.eclipse.org/bugs/enter_bug.cgi?product=Mylar">please 
-submit a report</a>, as we will be releasing updates frequently. To receive further announcements about the user study and future releases 
+submit a report</a>, as we will be releasing frequent updates.&nbsp; To receive further announcements about the user study and future releases 
 <a href="http://eclipse.org/mylar">please sign up for the mylar-announce list</a>.&nbsp;If you 
 participate in the study we suggest 
 that you <a href="http://eclipse.org/mylar">sign up for the mylar-users list</a>.&nbsp; 
