*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
 								July</td>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
-								Preview released (v0.3)</td>
+								Preview started (v0.3)</td>
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" rowspan="2">
